[project]
name = "langchain-geo-firecrawl-agent"
version = "0.1.0"
description = "Single-agent LangChain system integrating AMap MCP and Firecrawl MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "langchain>=1.0.0",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
deepseek = ["langchain-deepseek>=0.1.0"]
openai = ["langchain-openai>=1.0.0"]
all = ["langchain-deepseek>=0.1.0", "langchain-openai>=1.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[project.scripts]
geo-firecrawl-chat = "geo_firecrawl_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geo_firecrawl_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
